<resources>
    <string name="app_name">Games Application</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="label_main">With our app it will be much easier and more fun to keep track of your games!</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="remember">Remember-me</string>
    <string name="create_account">Create an Account</string>
    <string name="footer_label">Developed by DS2M</string>
    <string name="enter">Enter</string>
    <string name="register">New account</string>
    <string name="photo_label">Shall we choose a photo?</string>
    <string name="data_label">Data for authentication</string>
    <string name="label_person_data">Personal data</string>
    <string name="game_level">What is your game level?</string>
    <string name="games_finished_label">Games Finished</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="age_label">Age</string>
    <string name="nivel_noob">Noob</string>
    <string name="nivel_casual">Casual</string>
    <string name="nivel_tryhard">Tryhard</string>
    <string name="resgistered_games">Seus jogos cadastrados</string>

    <string-array name="consoles_array">
        <item>Nintendo</item>
        <item>Xbox</item>
        <item>Playstation</item>
        <item>PC</item>
    </string-array>
</resources>